--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "dotnet": "^1.1.4",
     "express": "^5.2.1",
     "mongoose": "^9.2.1",
